--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
 sources:
-  mate-terminal-1.4.0.tar.xz: 9b788092593a229b8c701ddf032c2c7f9dcb2848
----
+  "mate-terminal-1.8.0.tar.xz": 14b380c71aaf73499f5ae292ee14d2eb27920074
