--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   mate-terminal-1.14.0.tar.xz: a1b998334ac48147997ac0b596c40e4760edecf1
+sources:
+  mate-terminal-1.18.1.tar.xz: cf0ba10d1d3942672e08180469b7aa2367c315cb
